--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </h2>
 
             <p class="sub">
-                dibuat oleh <span><a href="#">brianashari</a></span> pada 23 Juli 2022
+                dibuat oleh <span><a href="#">brianashari</a></span> pada 23 Desember 2022
             </p>
 
             <p>
